[gd_scene load_steps=6 format=3 uid="uid://dt5kpuy85ogdg"]

[ext_resource type="Script" uid="uid://dcdr8c7xyu38j" path="res://Scripts/batalla.gd" id="1_rvmw3"]
[ext_resource type="Texture2D" uid="uid://bra3fh1x675go" path="res://Imagenes/fondo inicio.png" id="2_j82uf"]
[ext_resource type="Texture2D" uid="uid://438ga1vdtvvj" path="res://Imagenes/fondo_barra.png" id="3_tuw6l"]
[ext_resource type="Texture2D" uid="uid://cq372jkbj2dtx" path="res://Imagenes/borde_barra.png" id="4_xfy8r"]
[ext_resource type="Texture2D" uid="uid://bdnfk7m1tew5w" path="res://Imagenes/progreso_barra.png" id="5_xfy8r"]

[node name="Mundo1" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 6.0
offset_right = 40.0
offset_bottom = 46.0
script = ExtResource("1_rvmw3")

[node name="FondoInicio" type="Sprite2D" parent="Control"]
position = Vector2(579.25, 315.75)
scale = Vector2(1.5104575, 1.305169)
texture = ExtResource("2_j82uf")

[node name="PlayerHPBar" type="TextureProgressBar" parent="Control"]
layout_mode = 0
offset_left = 107.0
offset_top = 144.0
offset_right = 404.0
offset_bottom = 182.0
value = 100.0
texture_under = ExtResource("3_tuw6l")
texture_over = ExtResource("4_xfy8r")
texture_progress = ExtResource("5_xfy8r")

[node name="EnemyHPBar" type="TextureProgressBar" parent="Control"]
layout_mode = 0
offset_left = 793.0
offset_top = 143.0
offset_right = 1136.0
offset_bottom = 260.0
max_value = 30.0
value = 30.0
texture_under = ExtResource("3_tuw6l")
texture_over = ExtResource("4_xfy8r")
texture_progress = ExtResource("5_xfy8r")

[node name="VidaPlayerLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 113.0
offset_top = 150.0
offset_right = 400.0
offset_bottom = 179.0

[node name="VidaEnemigoLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 799.0
offset_top = 149.0
offset_right = 1085.0
offset_bottom = 177.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 100.0
offset_top = 463.0
offset_right = 1105.0
offset_bottom = 616.0
size_flags_horizontal = 4

[node name="Attack1Button" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ataque básico"

[node name="Attack2Button" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ataque cargado"

[node name="HealButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Curación"

[connection signal="pressed" from="Control/HBoxContainer/Attack1Button" to="Control" method="_on_attack_1_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Attack1Button" to="Control" method="_on_ataque_básico_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Attack2Button" to="Control" method="_on_ataque_cargado_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Attack2Button" to="Control" method="_on_attack_2_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/HealButton" to="Control" method="_on_heal_button_pressed"]
